test/distributions/bradc/wrongDomForDist/wrongType4.good
wrongType4.chpl:5: error: rectangular domains are not supported by the distribution MyDist
